feat: gorelease vars

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,8 +8,8 @@ before:
     - go generate ./...
 builds:
   - main: ./cmd
-    #ldflags:
-    #  - '-s -w -X main.Version={{.Version}} -X main.VersionStr={{.Version}} -X main.GitCommit={{.Commit}} -X main.GitShortCommit={{.ShortCommit}} -X main.Date={{.Date}} -X main.Author={{.Env.AUTHOR}} -X main.ReleaseDate={{.Env.DATE}}'
+    ldflags:
+      - '-s -w -X main.Version={{.Version}} -X main.VersionStr={{.Version}} -X main.GitCommit={{.Commit}} -X main.GitShortCommit={{.ShortCommit}} -X main.Date={{.Date}} -X main.Author={{.Env.AUTHOR}} -X main.ReleaseDate={{.Env.DATE}}'
     env:
       - CGO_ENABLED=0
     goos:
